# am-python

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  am.pyi  build.rs  justfile  pyproject.toml
.github/actions/setup-am/: action.yml
.github/workflows/: ci.yaml  docs.yaml  release.yaml
docs/: conf.py  index.md
notebooks/: example.ipynb
python/am/: __init__.py  _am.pyi  grid.py  model.py
python/am/_am/: __init__.pyi
src/: error.rs  ffi.rs  lib.rs  models.rs
tests/: conftest.py  test_errors.py  test_jacobian.py  test_model.py
